<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/home_page_txt"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/moneyhint"
            android:inputType="numberDecimal"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_amoney"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="৳"
            android:textColor="#000000"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

<HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/loanRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <RadioButton
            android:id="@+id/loanRadioLoanGiven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/givenloan"
            android:textSize="15dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/loanRadioLoanTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/takenloan"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/loanRadioLoanReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/returnloan"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/loanRadioLoanPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/paidloan"
            android:textSize="15dp" />

    </RadioGroup>
</HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="@color/home_page_txt"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loanSourec"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/ssourcehint"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/home_page_txt"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/showDatePicker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/calender" />
        <TextView
            android:id="@+id/showdatetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/loanSubmit"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_redius"
        android:padding="20dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loanBtnGiven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/vgivenloan"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loanBtnTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/vtakenloan"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loanBtnReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/vreturnloan"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loanBtnPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/vpaidloan"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </HorizontalScrollView>



</LinearLayout>