<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/home_page_txt"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/income_amount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/moneyhint"
            android:inputType="numberDecimal"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="৳"
            android:textColor="#000000"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="@color/home_page_txt"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/income_source"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/ssourcehint"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/home_page_txt"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/income_date"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/calender" />
        <TextView
            android:id="@+id/showtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/income_submit"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_redius"
        android:padding="20dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/incomeToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/today"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/incomeLast7day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/thisweek"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/incomeThisMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/thismonth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/incomeThisYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/thisyear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </HorizontalScrollView>



</LinearLayout>