<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25dp"
        android:textColor="#05BB08"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/Tincome"
            android:textColor="@color/home_page_txt"
            android:textSize="15dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/reportTotalIncome"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="20000"
            android:textSize="15dp"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_amoney"
            android:visibility="gone"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/Texpense"
            android:textColor="@color/home_page_txt"
            android:textSize="15dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/reportLastTotalExpense"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="20000"
            android:textSize="15dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_amoney"
            android:visibility="gone"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/Ttakenloan"
            android:textColor="@color/home_page_txt"
            android:textSize="15dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/reportLastTotalTakenLoan"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="20000"
            android:textSize="15dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:weightSum="5"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/Tgivenloan"
            android:textColor="@color/home_page_txt"
            android:textSize="15dp"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/reportLastTotalGivenLoan"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="20000"
            android:textSize="15dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/returnloan"
            android:textColor="@color/home_page_txt"
            android:textSize="15dp"
            android:textStyle="bold"
            android:paddingBottom="5dp"

            />

        <TextView
            android:id="@+id/reportLastTotalReturnLoan"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="20000"
            android:textSize="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:weightSum="5"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/Tpaidloan"
            android:textColor="@color/home_page_txt"
            android:textSize="15dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/reportLastTotalPaidLoan"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="20000"
            android:textSize="15dp"
            />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/reportToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/today"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/reportLast7day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/thisweek"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/reportLast30day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/thismonth"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/reportLastYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/subutton"
                android:padding="20dp"
                android:text="@string/thisyear"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/deleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:text="সকল তথ্য মুছুন"
        android:background="@drawable/button_redius"/>


</LinearLayout>